refactor[jdk17]: jdk17升级,List.of相关代码替换